# Max-k-cut-problem

./: README.md
algorithm (difficult)/: CMakeLists.txt  coalition_approx.cpp  example o1.txt  graph_generator.cpp  input.txt  main.cpp  max_tree.cpp  o2_update.cpp  output.txt  potential_benefits.cpp  same_point_transformations.cpp  three_max_tree.cpp
algorithm (practice)/: example.ipynb  input.txt  main (full).ipynb  main.ipynb  output.txt
algorithm (practice)/Data/: geo_cepii.xls
algorithm (practice)/executable/: difficult.lnk  simple.lnk
algorithm (python)/: Practice.ipynb  Practice_test.ipynb  input.txt  output.txt
algorithm (python)/Data/: coalition_to_countries.txt  coalition_to_countries_ISO.txt  countries.txt  human_development.txt  iso.txt  iso_new.txt
algorithm (python)/executable/: difficult.lnk  simple.lnk
algorithm (simple)/: CMakeLists.txt  checker.cpp  example o2.txt  graph_generator.cpp  input.txt  main.cpp  output.txt  random test (5).txt  timer.cpp
